# cpp_thread_pool

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README.zh-CN.md  README_CN.md  README_EN.md
.github/workflows/: ci.yml
docs/: design.md  threadpool_lifecycle.md
example/: example.cpp
include/: threadpool.h
src/: threadpool.cpp
test/: test.cpp
tests/: threadpool_tests.cpp
